2007-10-22  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Killed the Download() overload that returned a byte[].
	  Replaced it by an overload which returns a Stream, this way large files
	  can be handled without having to store it entirely in memory

2007-10-22  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs, src/Files/GenericFile.cs, src/Files/MusicFile.cs,
	  src/Files/PlaylistFile.cs, src/Files/ImageFile.cs: More XML comments

2007-10-22  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Utilities.cs, src/GphotoException.cs, src/File.cs, src/FileSystem.cs,
	  src/ErrorCode.cs, src/Camera.cs, src/Abilities.cs: Added XML
	  documentation for all public methods/classes

2007-10-21  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/GphotoException.cs, src/ErrorCode.cs, src/FileSystem.cs,
	  src/Base/CameraWidget.cs, src/Base/PortInfoList.cs,
	  src/Base/CameraFilesystem.cs, src/Base/PortInfo.cs,
	  src/Base/CameraList.cs, src/Base/Context.cs, src/Base/Port.cs,
	  src/Base/Object.cs, src/Base/ErrorCodes.cs, src/Base/Camera.cs,
	  src/Base/CameraFile.cs, src/Base/CameraAbilitiesList.cs: Since the old
	  API has to be broken to support 64bit linux, i might as well go the
	  whole hog and hide all the old API from public view to force dev's to
	  switch to the newer API. This way when it changes again, the users won't
	  be affected.

2007-10-20  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Camera.cs: If .Connect() fails, clean up and rethrow the exception

2007-10-18  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Added the last-ditch parser to handle invalid XML in a sane
	  way. It should work on 99% of the 'invalid' xml.

2007-10-18  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Camera.cs: Compile fix

2007-10-18  Alan McGovern <alan.mcgovern@gmail.com> 

	

2007-10-17  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Utilities.cs, src/Camera.cs, src/Makefile.am,