@@ -111,6 +111,18 @@ namespace Gphoto2
 			
 		}
 		
+		/// <summary>
+		/// Creates a new file from the supplied stream
+		/// </summary>
+		/// <param name="stream">The stream containing the file data
+		/// A <see cref="Stream"/>
+		/// </param>
+//		public ImageFile(System.IO.Stream stream)
+//			: base(stream)
+//		{
+//			
+//		}
+		
 //		// FIXME: Return an image or something
 //		public void CreateThumbnail()
 //		{
