@@ -162,6 +162,19 @@ namespace Gphoto2
 			
 		}
 		
+		
+		/// <summary>
+		/// Creates a new file from the supplied stream
+		/// </summary>
+		/// <param name="stream">The stream containing the file data
+		/// A <see cref="Stream"/>
+		/// </param>
+//		public MusicFile(System.IO.Stream stream)
+//			: base(stream)
+//		{
+//			
+//		}
+		
 		public override bool Equals (object o)
 		{
 			MusicFile f = o as MusicFile;
